tests/ui/bad_write_field_projections.stderr
error[E0308]: mismatched types
  --> tests/ui/bad_write_field_projections.rs:13:5
   |
13 |     field!(v, Foo, foo)
   |     ^^^^^^^-^^^^^^^^^^^
   |     |      |
   |     |      this expression has type `&'a gc_arena::barrier::Write<Gc<'gc, Foo<'gc>>>`
   |     expected `Gc<'_, Foo<'_>>`, found `Foo<'_>`
   |
   = note: expected struct `Gc<'gc, Foo<'gc>, >`
              found struct `Foo<'_>`
   = note: this error originates in the macro `field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0606]: casting `&Gc<'_, u32>` as `*const u32` is invalid
  --> tests/ui/bad_write_field_projections.rs:17:5
   |
17 |     field!(v, Foo, bar)
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/bad_write_field_projections.rs:21:5
   |
21 |     field!(v, Foo, baz)
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `&i64`, found `&f64`
   |     arguments to this function are incorrect
   |
   = note: expected reference `&i64`
              found reference `&f64`
note: associated function defined here
  --> src/barrier.rs
   |
   |     pub unsafe fn __from_ref_and_ptr(v: &T, _: *const T) -> &Self {
   |                   ^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0606]: casting `&f64` as `*const i64` is invalid
  --> tests/ui/bad_write_field_projections.rs:21:5
   |
21 |     field!(v, Foo, baz)
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `field` (in Nightly builds, run with -Z macro-backtrace for more info)
